[package]
name = "url_enum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
same-file = "1.0"
tokio = { version = "1.45", features = ["fs", "io-util", "io-std", "macros", "rt-multi-thread"] }
url = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
