[package]
name = "url_enum"
version = "0.1.2"
edition = "2024"
description = "A command-line tool for discovering URL paths or substituting values into URL templates from a wordlist"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "socks",
    "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
same-file = "1.0"
tokio = { version = "1.45", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "rt-multi-thread",
] }
url = "2.5"

[dev-dependencies]
criterion = "0.7"
tempfile = "3.20"

[[bench]]
name = "throughput"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
